--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>etech-a-sketch</title>
     <link rel="stylesheet" href="main.css">
+
 </head>
-<body>
-    
+<body> 
+    <script src="script.js" defer></script>
+    <div class="grid-container"></div>
 </body>
 </html>
