Feat: Implemented clear grid feature

--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
 <body> 
     <script src="script.js" defer></script>
     <div class="grid-container"></div>
+    <div class="reset-container">
+        <button class="clear">Clear Grid</button>
+        <button class="resize">Resize Grid</button>
+    </div>
 </body>
 </html>
